--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,7 @@
     </p>
     <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
       <% if authenticated? %>
-        <%= link_to "Go to Dashboard", "#", class: "btn-primary w-full sm:w-auto text-lg px-8 py-4" %>
+        <%= link_to "Go to Dashboard", dashboard_root_path, class: "btn-primary w-full sm:w-auto text-lg px-8 py-4" %>
       <% else %>
         <%= link_to "Get Started Free", new_registration_path, class: "btn-primary w-full sm:w-auto text-lg px-8 py-4 shadow-xl shadow-primary-500/20" %>
         <%= link_to "Learn More", "#", class: "btn-secondary w-full sm:w-auto text-lg px-8 py-4" %>
